Fixes mobile overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,6 @@ html {
 body {
   background-color: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
 }
 
 body::before {
